runtime/cds/appcds/TestWithProfiler.java SIGSEGV in TableStatistics ctr

XMLWordPrintable

    • b12
    • generic
    • generic
    • Verified

      The following test failed in the JDK20 CI:

      runtime/cds/appcds/TestWithProfiler.java

      Here's a snippet from the log file:

      #section:driver
      ----------messages:(5/151)----------
      command: driver TestWithProfiler
      reason: User specified action: run driver TestWithProfiler
      Mode: agentvm
      Agent id: 12
      elapsed time (seconds): 20.021
      ----------configuration:(17/2448)----------

      <snip>

      ----------System.out:(25/9167)----------
      Command line: [/opt/mach5/mesos/work_dir/jib-master/install/jdk-20+12-684/linux-x64-debug.jdk/jdk-20/fastdebug/bin/java -cp /opt/mach5/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S65079/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/66be32a7-fff2-451b-b739-00d2dc876fb0/runs/7bb16b6d-2490-4817-aab0-ec301f7dcba6/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_tier2_runtime/classes/2/runtime/cds/appcds/TestWithProfiler.d:/opt/mach5/mesos/work_dir/jib-master/install/jdk-20+12-684/src.full/open/test/hotspot/jtreg/runtime/cds/appcds:/opt/mach5/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S65079/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/66be32a7-fff2-451b-b739-00d2dc876fb0/runs/7bb16b6d-2490-4817-aab0-ec301f7dcba6/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_tier2_runtime/classes/2/test/lib:/opt/mach5/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S65079/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/66be32a7-fff2-451b-b739-00d2dc876fb0/runs/7bb16b6d-2490-4817-aab0-ec301f7dcba6/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_tier2_runtime/classes/2/test/hotspot/jtreg/runtime/cds/appcds:/opt/mach5/mesos/work_dir/jib-master/install/jtreg/6.1/1/bundles/jtreg-6.1+1.zip/jtreg/lib/javatest.jar:/opt/mach5/mesos/work_dir/jib-master/install/jtreg/6.1/1/bundles/jtreg-6.1+1.zip/jtreg/lib/jtreg.jar:/opt/mach5/mesos/work_dir/jib-master/install/jtreg/6.1/1/bundles/jtreg-6.1+1.zip/jtreg/lib/junit.jar:/opt/mach5/mesos/work_dir/jib-master/install/jtreg/6.1/1/bundles/jtreg-6.1+1.zip/jtreg/lib/hamcrest.jar:/opt/mach5/mesos/work_dir/jib-master/install/jtreg/6.1/1/bundles/jtreg-6.1+1.zip/jtreg/lib/testng.jar:/opt/mach5/mesos/work_dir/jib-master/install/jtreg/6.1/1/bundles/jtreg-6.1+1.zip/jtreg/lib/jcommander.jar:/opt/mach5/mesos/work_dir/jib-master/install/jtreg/6.1/1/bundles/jtreg-6.1+1.zip/jtreg/lib/guice.jar -XX:MaxRAMPercentage=4.16667 -Djava.io.tmpdir=/opt/mach5/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S65079/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/66be32a7-fff2-451b-b739-00d2dc876fb0/runs/7bb16b6d-2490-4817-aab0-ec301f7dcba6/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_tier2_runtime/tmp -cp /opt/mach5/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S65079/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/66be32a7-fff2-451b-b739-00d2dc876fb0/runs/7bb16b6d-2490-4817-aab0-ec301f7dcba6/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_tier2_runtime/scratch/1/myThread.jar -Xshare:dump -Xlog:cds -XX:SharedArchiveFile=/opt/mach5/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S65079/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/66be32a7-fff2-451b-b739-00d2dc876fb0/runs/7bb16b6d-2490-4817-aab0-ec301f7dcba6/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_tier2_runtime/scratch/1/appcds-18h43m19s000.jsa -XX:ExtraSharedClassListFile=/opt/mach5/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S65079/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/66be32a7-fff2-451b-b739-00d2dc876fb0/runs/7bb16b6d-2490-4817-aab0-ec301f7dcba6/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_tier2_runtime/scratch/1/runtime.cds.appcds.TestWithProfiler.java-test.classlist ]
      [2022-08-19T18:43:19.026317018Z] Gathering output for process 15603
      [ELAPSED: 1463 ms]
      [logging stdout to /opt/mach5/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S65079/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/66be32a7-fff2-451b-b739-00d2dc876fb0/runs/7bb16b6d-2490-4817-aab0-ec301f7dcba6/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_tier2_runtime/scratch/1/runtime.cds.appcds.TestWithProfiler.java-0000-dump.stdout]
      [logging stderr to /opt/mach5/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S65079/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/66be32a7-fff2-451b-b739-00d2dc876fb0/runs/7bb16b6d-2490-4817-aab0-ec301f7dcba6/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_tier2_runtime/scratch/1/runtime.cds.appcds.TestWithProfiler.java-0000-dump.stderr]
      [STDERR]

      [2022-08-19T18:43:20.483528284Z] Waiting for completion for process 15603
      [2022-08-19T18:43:20.483751566Z] Waiting for completion finished for process 15603
      Command line: [/opt/mach5/mesos/work_dir/jib-master/install/jdk-20+12-684/linux-x64-debug.jdk/jdk-20/fastdebug/bin/java -cp /opt/mach5/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S65079/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/66be32a7-fff2-451b-b739-00d2dc876fb0/runs/7bb16b6d-2490-4817-aab0-ec301f7dcba6/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_tier2_runtime/classes/2/runtime/cds/appcds/TestWithProfiler.d:/opt/mach5/mesos/work_dir/jib-master/install/jdk-20+12-684/src.full/open/test/hotspot/jtreg/runtime/cds/appcds:/opt/mach5/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S65079/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/66be32a7-fff2-451b-b739-00d2dc876fb0/runs/7bb16b6d-2490-4817-aab0-ec301f7dcba6/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_tier2_runtime/classes/2/test/lib:/opt/mach5/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S65079/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/66be32a7-fff2-451b-b739-00d2dc876fb0/runs/7bb16b6d-2490-4817-aab0-ec301f7dcba6/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_tier2_runtime/classes/2/test/hotspot/jtreg/runtime/cds/appcds:/opt/mach5/mesos/work_dir/jib-master/install/jtreg/6.1/1/bundles/jtreg-6.1+1.zip/jtreg/lib/javatest.jar:/opt/mach5/mesos/work_dir/jib-master/install/jtreg/6.1/1/bundles/jtreg-6.1+1.zip/jtreg/lib/jtreg.jar:/opt/mach5/mesos/work_dir/jib-master/install/jtreg/6.1/1/bundles/jtreg-6.1+1.zip/jtreg/lib/junit.jar:/opt/mach5/mesos/work_dir/jib-master/install/jtreg/6.1/1/bundles/jtreg-6.1+1.zip/jtreg/lib/hamcrest.jar:/opt/mach5/mesos/work_dir/jib-master/install/jtreg/6.1/1/bundles/jtreg-6.1+1.zip/jtreg/lib/testng.jar:/opt/mach5/mesos/work_dir/jib-master/install/jtreg/6.1/1/bundles/jtreg-6.1+1.zip/jtreg/lib/jcommander.jar:/opt/mach5/mesos/work_dir/jib-master/install/jtreg/6.1/1/bundles/jtreg-6.1+1.zip/jtreg/lib/guice.jar -XX:MaxRAMPercentage=4.16667 -Djava.io.tmpdir=/opt/mach5/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S65079/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/66be32a7-fff2-451b-b739-00d2dc876fb0/runs/7bb16b6d-2490-4817-aab0-ec301f7dcba6/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_tier2_runtime/tmp -Xshare:on -showversion -XX:SharedArchiveFile=/opt/mach5/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S65079/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/66be32a7-fff2-451b-b739-00d2dc876fb0/runs/7bb16b6d-2490-4817-aab0-ec301f7dcba6/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_tier2_runtime/scratch/1/appcds-18h43m19s000.jsa -Dtest.timeout.factor=4.0 -cp /opt/mach5/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S65079/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/66be32a7-fff2-451b-b739-00d2dc876fb0/runs/7bb16b6d-2490-4817-aab0-ec301f7dcba6/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_tier2_runtime/scratch/1/myThread.jar -XX:+UnlockDiagnosticVMOptions -XX:VerifyArchivedFields=1 -XX:+UnlockDiagnosticVMOptions -Xint -XX:StartFlightRecording:duration=15s,filename=myrecording.jfr,settings=profile,dumponexit=true TestWithProfilerHelper ]
      [2022-08-19T18:43:20.485394773Z] Gathering output for process 15772
      [ELAPSED: 18467 ms]
      [logging stdout to /opt/mach5/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S65079/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/66be32a7-fff2-451b-b739-00d2dc876fb0/runs/7bb16b6d-2490-4817-aab0-ec301f7dcba6/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_tier2_runtime/scratch/1/runtime.cds.appcds.TestWithProfiler.java-0001-exec.stdout]
      [logging stderr to /opt/mach5/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S65079/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/66be32a7-fff2-451b-b739-00d2dc876fb0/runs/7bb16b6d-2490-4817-aab0-ec301f7dcba6/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_tier2_runtime/scratch/1/runtime.cds.appcds.TestWithProfiler.java-0001-exec.stderr]
      [STDERR]
      java version "20-ea" 2023-03-21
      Java(TM) SE Runtime Environment (fastdebug build 20-ea+12-684)
      Java HotSpot(TM) 64-Bit Server VM (fastdebug build 20-ea+12-684, interpreted mode, sharing)

      [2022-08-19T18:43:38.952004647Z] Waiting for completion for process 15772
      [2022-08-19T18:43:38.952188293Z] Waiting for completion finished for process 15772
      [2022-08-19T18:43:38.952225083Z] Waiting for completion for process 15772
      [2022-08-19T18:43:38.952244310Z] Waiting for completion finished for process 15772
      [2022-08-19T18:43:38.967877267Z] Waiting for completion for process 15772
      [2022-08-19T18:43:38.967908095Z] Waiting for completion finished for process 15772
      ----------System.err:(44/3331)----------
       stdout: [[1.768s][info][jfr,startup] Started recording 1. The result will be written to:
      [1.768s][info][jfr,startup]
      [1.768s][info][jfr,startup] /opt/mach5/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S65079/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/66be32a7-fff2-451b-b739-00d2dc876fb0/runs/7bb16b6d-2490-4817-aab0-ec301f7dcba6/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_tier2_runtime/scratch/1/myrecording.jfr
      Run for -DTestWithProfiler.timeout=15 (seconds)
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # SIGSEGV (0xb) at pc=0x00007f09f4973dd5, pid=15772, tid=15917
      #
      # JRE version: Java(TM) SE Runtime Environment (20.0+12) (fastdebug build 20-ea+12-684)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 20-ea+12-684, interpreted mode, sharing, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0x1a1edd5] TableStatistics::TableStatistics(TableRateStatistics&, NumberSeq, unsigned long, unsigned long, unsigned long)+0x1a5
      #
      # Core dump will be written. Default location: Core dumps may be processed with "/opt/core.sh %p" (or dumping to /opt/mach5/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S65079/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/66be32a7-fff2-451b-b739-00d2dc876fb0/runs/7bb16b6d-2490-4817-aab0-ec301f7dcba6/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_tier2_runtime/scratch/1/core.15772)
      #
      # JFR recording file will be written. Location: /opt/mach5/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S65079/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/66be32a7-fff2-451b-b739-00d2dc876fb0/runs/7bb16b6d-2490-4817-aab0-ec301f7dcba6/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_tier2_runtime/scratch/1/hs_err_pid15772.jfr
      #
      # An error report file with more information is saved as:
      # /opt/mach5/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S65079/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/66be32a7-fff2-451b-b739-00d2dc876fb0/runs/7bb16b6d-2490-4817-aab0-ec301f7dcba6/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_tier2_runtime/scratch/1/hs_err_pid15772.log
      #
      # If you would like to submit a bug report, please visit:
      # https://bugreport.java.com/bugreport/crash.jsp
      #
      ];
       stderr: [java version "20-ea" 2023-03-21
      Java(TM) SE Runtime Environment (fastdebug build 20-ea+12-684)
      Java HotSpot(TM) 64-Bit Server VM (fastdebug build 20-ea+12-684, interpreted mode, sharing)
      ]
       exitValue = 134

      java.lang.RuntimeException: Hotspot crashed
      at jdk.test.lib.cds.CDSTestUtils.checkCommonExecExceptions(CDSTestUtils.java:320)
      at jdk.test.lib.cds.CDSTestUtils.checkExec(CDSTestUtils.java:473)
      at jdk.test.lib.cds.CDSTestUtils.checkExec(CDSTestUtils.java:460)
      at TestWithProfiler.main(TestWithProfiler.java:54)
      at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:104)
      at java.base/java.lang.reflect.Method.invoke(Method.java:578)
      at com.sun.javatest.regtest.agent.MainActionHelper$AgentVMRunnable.run(MainActionHelper.java:312)
      at java.base/java.lang.Thread.run(Thread.java:1589)

      JavaTest Message: Test threw exception: java.lang.RuntimeException
      JavaTest Message: shutting down test

      result: Failed. Execution failed: `main' threw exception: java.lang.RuntimeException: Hotspot crashed


      Here's the crashing thread's stack:

      --------------- T H R E A D ---------------

      Current thread (0x00007f09ec465800): JavaThread "JFR Periodic Tasks" daemon [_thread_in_vm, id=15917, stack(0x00007f09d0fe3000,0x00007f09d10e4000)]

      Stack: [0x00007f09d0fe3000,0x00007f09d10e4000], sp=0x00007f09d10e21a0, free space=1020k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x1a1edd5] TableStatistics::TableStatistics(TableRateStatistics&, NumberSeq, unsigned long, unsigned long, unsigned long)+0x1a5
      V [libjvm.so+0x19eae8d] SymbolTable::get_table_statistics()+0x61d
      V [libjvm.so+0x10e5e8a] JfrPeriodicEventSet::requestSymbolTableStatistics()+0x2a
      V [libjvm.so+0x10b4f65] jfr_emit_event+0x585
      j jdk.jfr.internal.JVM.emitEvent(JJJ)Z+0 jdk.jfr@20-ea
      j jdk.jfr.internal.RequestEngine$RequestHook.execute()V+43 jdk.jfr@20-ea
      j jdk.jfr.internal.RequestEngine.run_requests(Ljava/util/Collection;)J+133 jdk.jfr@20-ea
      j jdk.jfr.internal.RequestEngine.doPeriodic()J+3 jdk.jfr@20-ea
      j jdk.jfr.internal.PlatformRecorder.periodicTask()V+47 jdk.jfr@20-ea
      j jdk.jfr.internal.PlatformRecorder.lambda$startDiskMonitor$1()V+1 jdk.jfr@20-ea
      j jdk.jfr.internal.PlatformRecorder$$Lambda$70+0x00000008010416f8.run()V+4 jdk.jfr@20-ea
      j java.lang.Thread.run()V+13 java.base@20-ea
      v ~StubRoutines::call_stub 0x00007f09e0fded27
      V [libjvm.so+0x1028390] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, JavaThread*)+0x500
      V [libjvm.so+0x1028ba0] JavaCalls::call_virtual(JavaValue*, Klass*, Symbol*, Symbol*, JavaCallArguments*, JavaThread*)+0x430
      V [libjvm.so+0x1029011] JavaCalls::call_virtual(JavaValue*, Handle, Klass*, Symbol*, Symbol*, JavaThread*)+0x71
      V [libjvm.so+0x11b722b] thread_entry(JavaThread*, JavaThread*)+0x12b
      V [libjvm.so+0x105ed8c] JavaThread::thread_main_inner()+0x22c
      V [libjvm.so+0x1a67fe0] Thread::call_run()+0x100
      V [libjvm.so+0x1732fe3] thread_native_entry(Thread*)+0x103

      Java frames: (J=compiled Java code, j=interpreted, Vv=VM code)
      j jdk.jfr.internal.JVM.emitEvent(JJJ)Z+0 jdk.jfr@20-ea
      j jdk.jfr.internal.RequestEngine$RequestHook.execute()V+43 jdk.jfr@20-ea
      j jdk.jfr.internal.RequestEngine.run_requests(Ljava/util/Collection;)J+133 jdk.jfr@20-ea
      j jdk.jfr.internal.RequestEngine.doPeriodic()J+3 jdk.jfr@20-ea
      j jdk.jfr.internal.PlatformRecorder.periodicTask()V+47 jdk.jfr@20-ea
      j jdk.jfr.internal.PlatformRecorder.lambda$startDiskMonitor$1()V+1 jdk.jfr@20-ea
      j jdk.jfr.internal.PlatformRecorder$$Lambda$70+0x00000008010416f8.run()V+4 jdk.jfr@20-ea
      j java.lang.Thread.run()V+13 java.base@20-ea
      v ~StubRoutines::call_stub 0x00007f09e0fded27

      siginfo: si_signo: 11 (SIGSEGV), si_code: 1 (SEGV_MAPERR), si_addr: 0x0000000000000020

            Assignee:
            Coleen Phillimore
            Reporter:
            Daniel Daugherty
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: