8292686: runtime/cds/appcds/TestWithProfiler.java SIGSEGV in TableStatistics ctr